[project]
name = "fabric-learn"
version = "0.1.0"
description = ""
authors = [
    {name = "Andy Miles",email = "akmiles@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "delta-spark (>=3.3.0,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "fabric_learn", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
